<resources>
    <string name="app_name">Fit App</string>
    <string name="action_settings">Settings</string>

    <string name="fit_main_titlepage">Провал – часть успеха</string>
    <string name="fit_main_subtitlepage">Продолжай работать, чтобы достичь максимум успеха</string>
    <string name="fit_main_btn">НАЧАТЬ УПРАЖНЕНИЯ</string>

    <string name="fit_main_work_titlepage">Виды тренировок</string>
    <string name="fit_main_work_subtitlepage">Выберите тип тренировки</string>
    <string name="fit_main_work_intropage">Введение</string>
    <string name="fit_main_work_subintropage">Чтобы занятия спортом были эффективными, нужен комплексный подход. Лучший результат можно получить, сочетая разные виды фитнеса.</string>
    <string name="fit_main_work_cardio">Кардио</string>
    <string name="fit_main_work_power">Силовая</string>
    <string name="fit_main_work_scretch">Растяжка</string>
    <string name="fit_main_work_yoga">Йога</string>


    <string name="fit_workout_titlepage">Кардио</string>
    <string name="fit_workout_subtitlepage">Кардио - это ...</string>
    <string name="fit_workout_start_now">НАЧАТЬ</string>
    <string name="fit_workout_jump_rise">Jump Rise</string>
    <string name="fit_workout_jump_rise_desc">от 4 до 5 минут</string>
    <string name="fit_workout_butterfly_cut">Butterfly Cut</string>
    <string name="fit_workout_butterfly_cut_desc">от 4 до 5 минут</string>
    <string name="fit_workout_lay_back">Lay Back</string>
    <string name="fit_workout_lay_back_desc">от 4 до 5 минут</string>
    <string name="fit_workout_scissors">Scissors X</string>
    <string name="fit_workout_scissors_desc">от 4 до 5 минут</string>
    
    <string name="fit_start_work_intropage">Как выполнять</string>
    <string name="fit_start_work_subintropage">Simple kicking the text of content....</string>
    
    <string-array name="name">
        <item>Отведение ног</item>
        <item>Кик ногой + Шаг назад</item>
        <item>Касание пятки ладонью</item>
        <item>Подъем колена</item>
        <item>Удары в сторону</item>
        <item>Выпады с шагом назад</item>
        <item>Отжимания от скамьи</item>
        <item>Ягодичный мостик</item>
        <item>Горизонтальный бег</item>
        <item>Сумо-приседы</item>
        <item>Наклоны корпуса</item>
        <item>Вращение бедрами</item>
        <item>Боковой выпад</item>
        <item>Поза бабочки</item>
        <item>Подъем ноги к груди</item>
        <item>Пашчимоттанасана</item>
        <item>Поза полулотоса</item>
        <item>Поза ребенка</item>
        <item>Поза посоха</item>
        <item>Поза дерева</item>
    </string-array>

    <string-array name="img">
        <item>cardio0</item>
        <item>cardio1</item>
        <item>cardio2</item>
        <item>cardio3</item>
        <item>cardio4</item>
        <item>power0</item>
        <item>power1</item>
        <item>power2</item>
        <item>power3</item>
        <item>power4</item>
        <item>stretch0</item>
        <item>stretch1</item>
        <item>stretch2</item>
        <item>stretch3</item>
        <item>stretch4</item>
        <item>yoga0</item>
        <item>yoga1</item>
        <item>yoga2</item>
        <item>yoga3</item>
        <item>yoga4</item>
    </string-array>

    <string-array name="desc">
        <item>Ноги поставьте вплотную друг к другу, а руки вытяните перед собой. Сомкните локти и предплечья. На выдохе отведите правую ногу в сторону и поставьте на носок. Одновременно разведите руки в Т-образную позицию, поддерживая их параллельно полу. На вдохе вернитесь в исходное положение и сделайте очередное повторение, но уже с движением левой ноги. Упражнение помогает раскрыть грудную клетку и улучшить осанку, а также убирает лишний жир с зоны бедер, укрепляет плечевые мышцы и суставы.</item>
        <item>Расставьте ноги по вертикали плеч. Сделайте кик правой ногой вперед, после чего поставьте ее обратно, перенесите на нее вес туловище, а левой ногой шагните назад. Двигайте руками, аналогично как во время ходьбы. Закончите целый подход на одну сторону, после чего сработайте уже левой ногой по аналогичной технике. Элемент кардио-тренировки для новичков умеренно интенсивное, поэтому благотворно сказывается на сердечно-сосудистой системе, а также помогает проработать рельеф бедер.</item>
        <item>Расставьте ноги чуть шире плеч и немного согните ноги в коленях. На выдохе поднимите правую пятку выше левого колена. Одновременно с этим коснитесь ее левой ладонью, после чего на вдохе примите стартовое положение. Следующее движение сделайте левой пяткой и поднимите ее выше правого колена. Выполните касание с правой ладонью. Представленный элемент кардио-тренировки для начинающих помогает укрепить приводящие мышцы бедер, а также развивает косые мышцы живота, прорабатывает зоны талии и боков.</item>
        <item>Поставьте стопы рядом друг с другом. Перенесите вес тела на левую ногу, а правую зафиксируйте на носке. Первым движением поднимите правое колено до уровня параллели бедра с полом. Поставьте ногу обратно, после чего сделайте мах вперед, до высоты чуть ниже параллели с полом. Выполняйте целый подход на одну ногу, затем перейдите на левую ногу. Элемент кардио-тренировки без прыжков развивает общую выносливость атлета, укрепляет коленные и бедренные суставы, что важно для людей в любом возрасте.</item>
        <item>Зафиксируйте ноги по вертикали плеч, согните руки в локте, а ладони сожмите в кулаки. Примите боевую стойку, после чего на выдохе отведите левую ногу в сторону, поверните корпус в правую, а левой рукой выполните удар. На вдохе вернитесь в исходную позицию, после чего сделайте повторение со сменой сторон. Это кардио-упражнение помогает не только сжечь больше калорий за счет работы верхней и нижней части тела, но и убрать жир с области талии и бедер.</item>
        <item>Руки в удобном положении: на поясе, у груди или расслаблены по бокам. Делайте шаг назад, при этом сохраняйте вес тела на впереди стоящей ноге. Отталкивайтесь передней ногой от пола, возвращаясь в исходное положение.</item>
        <item>Поставьте руки чуть шире плеч, ладони на уровне груди. Руки в локтевом суставе сгибайте под 45 градусов (не прижимайте и сильно не разводите локти), затем движением, немного сдавливая скамью, вернитесь в исходное положение.</item>
        <item>Поставьте ноги шире таза, носки слегка развернуть. Давите всей стопой в пол, поднимая таз вверх, при подъеме перенесите вес тела на верх лопаток. В верхней точке сокращайте ягодичные мышцы и заднюю поверхность бедра, задерживаясь на 1–2 секунды.</item>
        <item>Упритесь прямыми руками в пол, поочередно в быстром темпе подтягивайте колени к груди, имитируя бег.</item>
        <item>Расставьте широко ноги. Выполняйте медленные глубокие приседания, делая паузы на 1–2 секунды в приседе.</item>
        <item>Положите руки на пояс и начните выполнять наклоны сначала в одну сторону, потом в другую.</item>
        <item>Сходное положение: руки на поясе. Поднимите колено и начните вращать ногой. Сначала вращайте правой ногой (в одну сторону, потом в обратную). Затем вращайте левой ногой (в одну сторону, потом в обратную).</item>
        <item>Расставьте широко ноги и согните правую ногу в колене, перенося на нее вес тела. Бедро правой ноги должно быть как минимум параллельно полу (можно опустить и глубже), колено не выходит вперед носка. Левая нога остается выпрямленной.</item>
        <item>Сядьте прямо и согните ноги в коленях. Расставьте ноги так, чтобы колени легли на пол, а стопы соединились вместе. Положите руки на голени и подтяните ступни поближе к тазу. Спина остается прямой.</item>
        <item>Лягте на спину, согните ноги в коленях. Поднимите одну ногу вверх и ухватите ее за голень, стараясь поближе притянуть к груди. Поднятая нога остается полностью выпрямленной.</item>
        <item>Сядьте на пол, вытяните обе ноги вперед. наклоняйтесь корпусом вниз, начиная движение от таза. Захватывая стопы руками, медленно и неспешно старайтесь опустить корпус вниз.</item>
        <item>Сядьте на пол. Согнув правую ногу в коленном суставе, захватите руками стопу и медленно уложите её согнутым коленом к полу, поместив у основания левого бедра. Тоже самое выполните с левой ногой. </item>
        <item>Сядьте на пол на колени, таз опустите. Медленно опустите грудь вниз, голову можно положить на пол. Руки положите вдоль корпуса.</item>
        <item>Сядьте на пол, выпрямите ноги. Держите ноги вместе, а спину прямой. Плечи опустите. Поставьте ладони возле бёдер на пол пальцами вперёд, выпрямите локти.</item>
        <item>Поставьте одну ногу стопой к внутренней части бедра другой (опорной) ноги. Опорная нога ровная, при этом колено не должно быть втянуто до конца. Сложите ладони над головой вместе. Не напрягайте их.</item>
    </string-array>

    <string-array name="type">
        <item>cardio</item>
        <item>power</item>
        <item>stretch</item>
        <item>yoga</item>
    </string-array>

    <string-array name="type_name">
        <item>Кардио</item>
        <item>Силовая</item>
        <item>Растяжка</item>
        <item>Йога</item>
    </string-array>

    <string-array name="type_desc">
        <item>Помогает безопасно и эффективно начать работу над формированием стройного подтянутого тела</item>
        <item>Упражнения необходимы для повышения физической силы</item>
        <item>Упражнения улучшают гибкость всего тела</item>
        <item>Йога необходима для приведения тела и мыслей в гармонию</item>
    </string-array>
</resources>