<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainWorkAct">

    <TextView
        android:id="@+id/titlepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/fit_main_work_titlepage"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/subtitlepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/fit_main_work_subtitlepage"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlepage"/>

    <View
        android:id="@+id/divpage"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/subtitlepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/intropage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/fit_main_work_intropage"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divpage"/>

    <TextView
        android:id="@+id/subintropage"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/fit_main_work_subintropage"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intropage"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subintropage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/cardio"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:src="@drawable/cardio"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/cardiotxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_main_work_cardio"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardio"
                app:layout_constraintStart_toStartOf="@+id/cardio"
                app:layout_constraintTop_toTopOf="@+id/cardio" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/power"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:src="@drawable/silovaya"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/powertxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_main_work_power"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/power"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/power"
                app:layout_constraintTop_toTopOf="@+id/power" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/stretch"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:src="@drawable/scratch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/stretchtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_main_work_scretch"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/stretch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/stretch"
                app:layout_constraintTop_toTopOf="@+id/stretch" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="130dp">

            <ImageView
                android:id="@+id/yoga"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:src="@drawable/yoga"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/yogatxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_main_work_yoga"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/yoga"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/yoga"
                app:layout_constraintTop_toTopOf="@+id/yoga" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>