<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".WorkoutAct">

    <TextView
        android:id="@+id/titlepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/fit_workout_titlepage"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:lineSpacingExtra="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/subtitlepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/fit_workout_subtitlepage"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlepage" />

    <View
        android:id="@+id/divpage"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:background="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/subtitlepage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/fitone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divpage">
        
        <ImageView
            android:id="@+id/img1"
            android:src="@drawable/power0"
            android:layout_width="90dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fitonetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fitonedesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fit_workout_jump_rise_desc"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fittwo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fitone">

        <ImageView
            android:id="@+id/img2"
            android:src="@drawable/power1"
            android:layout_width="90dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fittwotitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fittwodesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fit_workout_butterfly_cut_desc"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fitthree"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fittwo">

        <ImageView
            android:id="@+id/img3"
            android:src="@drawable/power2"
            android:layout_width="90dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fitthreetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_workout_lay_back"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fitthreedesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fit_workout_lay_back_desc"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fitfour"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fitthree">

        <ImageView
            android:id="@+id/img4"
            android:src="@drawable/power3"
            android:layout_width="90dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fitfourtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_workout_scissors"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fitfourdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fit_workout_scissors_desc"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fitfive"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fitfour">

        <ImageView
            android:id="@+id/img5"
            android:src="@drawable/power4"
            android:layout_width="90dp"
            android:layout_height="70dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fitfivetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fit_workout_scissors"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fitfivedesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fit_workout_scissors_desc"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/bgprogress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:background="#80DDD0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/btnexercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/fit_workout_start_now"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>